--- a/layouts/top_includes.html.erb
+++ b/layouts/top_includes.html.erb
@@ -8,9 +8,9 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="/bootstrap/css/custom.css">
 
-<!-- prism pretty source code -->
-<link rel="stylesheet" href="http://prismjs.com/themes/prism-okaidia.css" />
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/prism.min.js"></script>
+<!-- Prism Syntax highlight -->
+<link href="/bootstrap/prism/prism.css" rel="stylesheet" />
+<script src="/bootstrap/prism/prism.js"></script>
 
 <!-- docsearch -->
 <link
