--- a/content/content/lectures/part3/195_software_engineering.md.erb
+++ b/content/content/lectures/part3/195_software_engineering.md.erb
@@ -1,31 +1,17 @@
 ---
 title: Software Engineering
-homework: 1) Reflection about Software Engineering and you; 2) Complete work on nT 0.8
 desc: We look Computer Science and Software Engineering
-cat: software design
 ---
-<%= homework_hdr %>
 
-{:start="1"}
-<%= include_topic :hw_reflection_cosi %>
-{:start="2"}
-1. **Prepare for full scalability runoff dry run today!**
+* What does this mean: :topic_link :softw_engineering_brief
+* How do be effective: :topic_link :se_rules_of_thumb
 
-##### Great, but not required, readings
+:slide_title For Further Reading 
+
 * [“Software Engineering: An Idea whose time has come and gone?](http://www.systemsguild.com/pdfs/tdmsoftwaresummer2009.pdf)
 * [“Can practitioners neglect theory and theoreticians neglect practice?"](http://disciplinas.stoa.usp.br/pluginfile.php/17266/mod_resource/content/1/ieee_computer_mbroy.pdf)
 * [What is Computer Science?](http://www.cs.mtu.edu/~john/whatiscs.html)
 * [Is Computer Science Science?](http://www.cs.mtu.edu/~john/jenning.pdf)
 * [Is Mathematics a Science?](http://www.arachnoid.com/is_math_a_science/)
 
-#### Today
-* Let's take a look at the :topic_link :cosi105b_final_deliverables /
-* Let's take a look at :topic_link :scalability_runoff /
-* Dry Run of Scalability Runoff
-
-##### Effectiveness
-* What does this mean: :topic_link :softw_engineering_brief /
-* How do be effective: :topic_link :se_rules_of_thumb /
-
-#### Next Class
 :lecture_end
