--- a/content/content/lectures/part3/200_last_class.md.erb
+++ b/content/content/lectures/part3/200_last_class.md.erb
@@ -14,7 +14,7 @@ A quick review and update:
 
 #### T.H.E. E.N.D.
 
-* Do :topic_link :scalability_runoff /
+* Do :topic_link :scalability_runoff
 * We will have Loader.IO set up with all of your sites wired up and should be able to go through them more efficiently.
 
 <blockquote class="pretty">THANKS! It's been quite a journey. Each team pushed themsleves in different ways giving us the richest set of nanoTwitters that we've had over the years I have taught this. Well done! Thanks to everyone and especially our TAs!</blockquote>
