--- a/content/content/lectures/part3/200_last_class.md.erb
+++ b/content/content/lectures/part3/200_last_class.md.erb
@@ -1,20 +1,19 @@
 ---
 title: Last class!
 desc: Scalability Runoff
-homework:  None
-cat: general
 ---
-#### Final Deliverables
-A quick review and update:
-
-1. Deliverables due dates will vary for each team. See :topic_link :cosi105b_final_deliverables /. Your submissions are mostly contained in your github repo. You will put the url of your github repo in the submission in Latte.Those of you who have had several github repos or had some accident with losing information, you need to give us your "official single submission" which is the only one we will review for feedback and grading. Please take the time to neaten it up so that it is presentable and professional. It should include:
-    1. All your code, client code, server code, services, everything. You can refer to "How it will be evaluated" if you make sure you have everything covered. Also don't make it a treasure hunt for us to find stuff.
-    1. Your README file, including of course all the version by version notes with what was done and who did them and a codeclimate badge.
-    1. And your fully running nanoTwitter deployed to Digital Ocean so we can test it.
-
-#### T.H.E. E.N.D.
-
+:h3 Last class!
 * Do :topic_link :scalability_runoff
-* We will have Loader.IO set up with all of your sites wired up and should be able to go through them more efficiently.
 
-<blockquote class="pretty">THANKS! It's been quite a journey. Each team pushed themsleves in different ways giving us the richest set of nanoTwitters that we've had over the years I have taught this. Well done! Thanks to everyone and especially our TAs!</blockquote>
+:slide_title Improving the course
+
+* Open Discussion: How to make the course better?
+* Term project organization. Does it need more structure, less structure?
+* Discuss...
+
+:slide_title Lastly
+
+* Please do your course evals NOW in Latte
+* Please answer a few questions for me in the [End of Term Survey](https://forms.gle/1Bp2eM4BEVM2WJtdA)
+
+:quote "THANKS! It's been quite a journey. Each team pushed themsleves in different ways giving us the richest set of nanoTwitters that we've had over the years I have taught this. Well done! Thanks to everyone and especially our TAs!"
