--- a/content/content/lectures/part3/200_last_class.md.erb
+++ b/content/content/lectures/part3/200_last_class.md.erb
@@ -8,7 +8,11 @@ desc: Scalability Runoff
 :slide_title Improving the course
 
 * Open Discussion: How to make the course better?
+* How was the pacing?
 * Term project organization. Does it need more structure, less structure?
+* What would you add, what would you drop?
+* Compare to Capstone (Cosi166)
+* Anyone intersted in TAing 105 next year?
 * Discuss...
 
 :slide_title Lastly
@@ -16,4 +20,6 @@ desc: Scalability Runoff
 * Please do your course evals NOW in Latte
 * Please answer a few questions for me in the [End of Term Survey](https://forms.gle/1Bp2eM4BEVM2WJtdA)
 
-:quote "THANKS! It's been quite a journey. Each team pushed themsleves in different ways giving us the richest set of nanoTwitters that we've had over the years I have taught this. Well done! Thanks to everyone and especially our TAs!"
+:quote "THANKS! It's been quite a journey. Each team pushed themsleves in different ways but all teams built something unique that scaled better than you could have imagined! Well done! Thanks to everyone and especially our TAs!"
+
+:lecture_end
