--- a/layouts/top_includes.html.erb
+++ b/layouts/top_includes.html.erb
@@ -8,19 +8,20 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="/bootstrap/css/custom.css">
 
-<!-- Prism Syntax highlight -->
-<link href="/bootstrap/prism/prism.css" rel="stylesheet" />
-<script src="/bootstrap/prism/prism.js"></script>
+<!-- prism pretty source code -->
+<link rel="stylesheet" href="http://prismjs.com/themes/prism-okaidia.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/prism.min.js"></script>
 
-<!-- docsearch -->
+<%# <!-- docsearch -->
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/docsearch.js@2.6.3/dist/cdn/docsearch.min.css"
 />
-<!-- end docsearch -->
+<!-- end docsearch --> %>
 
 <!-- Feather icons -->
 <!-- script src="https://unpkg.com/feather-icons"></script-->
 <!-- End Feather icons -->
 
+  <%= render "/expertrec_search.*" %>
 
